# ModstackInstaller

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  installer.rs  java.rs  lib.rs  main.rs
src/assets/: icon.icns
src/components/: InstallerShell.css  InstallerShell.tsx  LangSelector.css  LangSelector.tsx  Sidebar.tsx  SplashScreen.css  SplashScreen.tsx  TitleBar.tsx
src/components/steps/: ErrorStep.tsx  FinishStep.tsx  InstallDirStep.tsx  InstallingStep.tsx  LicenseStep.tsx  WelcomeStep.tsx  steps.css
src/i18n/: translations.ts  useTranslation.tsx
src/styles/: global.css
