[package]
name = "modstack-installer"
version = "1.0.1"
description = "Modstack Launcher Installer"
authors = ["Modstack Team"]
edition = "2021"

[lib]
name = "modstack_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-http   = "2"
tauri-plugin-os     = "2"
tauri-plugin-shell  = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
regex        = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg      = "0.52"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"
